[tool.poetry]
name = "untruncate_json"
version = "1.1.0"
description = "Make truncated json valid again by adding missing closing characters."
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = [
    "untruncate_json/**/*.py",
    "untruncate_json/**/*.md",
    "untruncate_json/**/*.txt",
    "untruncate_json/**/*.html",
    "untruncate_json/**/*.jinja",
]
exclude = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/untruncate_json"
homepage = "https://github.com/matthewdeanmartin/untruncate_json"
documentation ="https://github.com/matthewdeanmartin/untruncate_json"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/untruncate_json/issues"
"Change Log" = "https://github.com/matthewdeanmartin/untruncate_json/blob/main/CHANGES.md"

[tool.poetry.scripts]
dedlin = 'untruncate_json.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8, <4.0"

[tool.poetry.dev-dependencies]
setuptools = "*"
# jsonfixer shares same namespace of halfjson! Can't share venv!
jsonfixer = "^0.2.2"
# truncjson = "^1.2.12"
# halfjson = "^0.1.2"
mypy = ">=1.6.1"
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
hypothesis = {extras = ["cli"], version = ">=6.88.1"}
pre-commit = ">=3.5.0"
build = "^1.0.3"
ruff = "*"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
# Can't use poetry and mypyc together?
#[build-system]
#requires = ["poetry>=0.12"]
## build-backend = "poetry.masonry.api"
#build-backend = "poetry.core.masonry.api"

[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
    "mypy >= 1.7.1",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["dedlin"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 1000

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = [
    "E722",
    "E501",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "hide"
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[mypy]
warn_return_any = true
warn_unused_configs = true
strict = true