[project]
name = "untruncate_json"
version = "1.1.0"
description = "Make truncated json valid again by adding missing closing characters."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Repository = "https://github.com/matthewdeanmartin/untruncate_json"
Homepage = "https://github.com/matthewdeanmartin/untruncate_json"
Documentation = "https://github.com/matthewdeanmartin/untruncate_json"
"Bug Tracker" = "https://github.com/matthewdeanmartin/untruncate_json/issues"
"Change Log" = "https://github.com/matthewdeanmartin/untruncate_json/blob/main/CHANGES.md"

[project.scripts]
dedlin = "untruncate_json.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["untruncate_json"]
include = [
    "untruncate_json/**/*.py",
    "untruncate_json/**/*.md",
    "untruncate_json/**/*.txt",
    "untruncate_json/**/*.html",
    "untruncate_json/**/*.jinja",
]

[dependency-groups]
dev = [
    "setuptools",
    "jsonfixer>=0.2.2",
    "mypy>=1.6.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "hypothesis[cli]>=6.88.1",
    "pre-commit>=3.5.0",
    "build>=1.0.3",
    "ruff",
    "jiggle-version>=2.1.0",
    "troml-dev-status>=0.6.0; python_version >= '3.9'",
    "dont-be-lazy>=0.1.2; python_version >= '3.10'",
    "pydoc-fork>=3.0.0; python_version >= '3.10'",
]

[tool.uv]
default-groups = ["dev"]
universal = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
# Can't use poetry and mypyc together?
#[build-system]
#requires = ["poetry>=0.12"]
## build-backend = "poetry.masonry.api"
#build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["dedlin"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 320

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = [
    "E722",
    "E501",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "hide"
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[mypy]
warn_return_any = true
warn_unused_configs = true
strict = true

